--- a/app/src/main/res/layout/content_diary_list.xml
+++ b/app/src/main/res/layout/content_diary_list.xml
@@ -11,8 +11,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ListView android:id="@+id/listView" android:layout_height="match_parent" android:layout_width="match_parent"/>
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listview">
+
+        </ListView>
     </ScrollView>
 
 
