--- a/app/src/main/res/layout/view_result_list_item.xml
+++ b/app/src/main/res/layout/view_result_list_item.xml
@@ -74,6 +74,15 @@
                 android:layout_toRightOf="@+id/divider_sex_list_view"
                 android:textColor="@color/colorWhite"
                 android:text="12세" />
+
+            <TextView
+                android:id="@+id/is_problem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/colorWhite" />
         </RelativeLayout>
 
 
