--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
                 android:background="@drawable/icon_profile" />
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="40dp"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/bg_title" />
 
@@ -35,6 +35,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="right"
+                android:layout_margin="10dp"
                 android:background="@drawable/icon_extra" />
 
         </android.support.v7.widget.Toolbar>
