--- a/app/src/main/res/layout/view_result_list_item.xml
+++ b/app/src/main/res/layout/view_result_list_item.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_marginTop="10dp"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimaryDark">
 
             <TextView
                 android:id="@+id/text_day_list_view"
