--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -15,14 +15,13 @@
         android:fitsSystemWindows="true"
         app:titleTextColor="@color/colorPrimaryDark"
         android:theme="@style/AppTheme.AppBarOverlay"
-        android:background="@color/colorWhite">
+        android:background="@color/colorPrimaryDark">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            android:background="@drawable/bg_sleep"
             app:titleTextColor="@color/colorPrimaryDark"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
